# voicelink-core

./: .env  .env.example  .gitignore  ANALYTICS_API_SUMMARY.md  BACKEND_COMPLIANCE_REPORT.md  DATABASE_INTEGRATION_TEMPLATE.py  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  MOCK_DATA_REMOVAL_COMPLETE.md  SECURITY_UPDATE_MOCK_DATA_REMOVED.md  TRANSCRIPT_FEATURE_SUMMARY.md  create_meeting_test.py  docker-compose.yml  main.py  main_enhanced.py  main_simple.py  orchestrate_voicelink.py  quick_test_analytics.py  requirements.txt  requirments.txt  setup.py  setup_real_audio.py  temp.html  test_audio_integration.py  test_fixes.py  test_transcript_endpoint.py  test_transcript_fix.py  voicelink.db
analytics/: __init__.py  api.py  extraction_engine.py  models.py  service.py
api/: __init__.py  analytics_endpoints.py  config.py  main.py  middleware.py  routes.py  routes_enhanced.py  routes_fixed.py  routes_simple.py  security.py  utils.py
api/routers/: health.py  meetings.py  meetings_new.py
audio_engine/: .gitignore  CMakeLists.txt  engine.py
audio_engine/bindings/: CMakeLists.txt  audio_engine_py.cpp
audio_engine/include/: audio_engine.h
audio_engine/python/: audio_bridge.py  audio_processor.py  integration_test.py
audio_engine/src/: audio_engine.cpp  audio_engine_cli.cpp
audio_engine/tests/: CMakeLists.txt  test_audio_engine.cpp  test_minimal.cpp
blockchain/: simple_provenance.py
code_context/: CMakeLists.txt
code_context/bindings/: code_parser_py.cpp
code_context/include/: code_parser.h
code_context/python/: code_extractor.py  context_engine.py  simple_context_engine.py
code_context/src/: code_context_cli.cpp  code_parser.cpp
code_context/tests/: example.cpp  test_code_parser.cpp
config/: __init__.py  implementation_status.py  settings.py
core/: __init__.py  audio_bridge.py  orchestrator.py  sdk.py
data/meetings/: meetings.json
database/: connection.py  models.py
demos/: __init__.py  comprehensive_demo.py  demo_llm.py  demo_voicelink.py  final_demo.py
docs/: app_integration.md  bot_integration.md  browser_extension_concept.js  chain_integration.md  frontend_development_prompt.md  integration_guide.md  integrations_roadmap.md  live_audio_capture.md
integrations/: manager.py  zoom_webhook.py
llm_engine/: enhanced_pipeline.py  enhanced_pipeline_with_context.py  pipeline.py.backup  utils.py
llm_engine/adapters/: __init__.py  openai_adapter.py  vertexai_adapter.py
llm_engine/modules/: asr_adapter.py  asr_adapter_fallback.py  asr_elevenlabs.py  asr_simple.py  asr_smart.py  doc_generator.py  voice_qa.py
persistence/: database_service.py
scripts/: deploy_audio_engine.py  examine_pipeline.py  find_mock_usage.py  run_dev.py  test_endpoints.py  update_pipeline.py
services/: audio_service.py  meeting_service.py  real_audio_service.py
tests/: __init__.py  integration_test_analytics.py  interactive_test.py  test_analytics_api.py  test_analytics_integration.py  test_process_meeting.py
utils/: setup_voicelink.py
(+2 files in other folders)
